recycling-bin/2026-04-21-repo-cleanup/tmp/phase3-metadata/objects/affiliates__dll/fields/affiliate_tier__c.field-meta.xml
<CustomField>
    <fullName>affiliate_tier__c</fullName>
    <label>affiliate_tier</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>affiliate_tier</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>