recycling-bin/2026-04-21-repo-cleanup/tmp/phase3-metadata/objects/affiliates__dll/fields/cancellation_rate__c.field-meta.xml
<CustomField>
    <fullName>cancellation_rate__c</fullName>
    <label>cancellation_rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>cancellation_rate</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Number</type>
</CustomField>